added some examples